--- a/app/views/doctors/_form.html.erb
+++ b/app/views/doctors/_form.html.erb
@@ -1,4 +1,7 @@
 <%= form_for(@doctor) do |f| %>
+
+	<%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+
   <% if @doctor.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@doctor.errors.count, "error") %> prohibited this doctor from being saved:</h2>
