--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+
 <p>
   <b>Name:</b>
   <%= @doctor.name %>
@@ -15,10 +17,6 @@
   <%= @doctor.address %>
 </p>
 
-<p>
-  <b>Password:</b>
-  <%= @doctor.password %>
-</p>
 
 <p>
   <b>Role:</b>
