--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -19,18 +19,13 @@
     <%= f.label :end %><br />
     <%= f.time_select :end %>
   </div>
-  <div class="field">
-    <%= f.label :state %><br />
-    <%= f.text_field :state %>
-  </div>
-  <div class="field">
-    <%= f.label :user %><br />
-    <%= f.text_field :user %>
-  </div>
-  <div class="field">
-    <%= f.label :doctor %><br />
-    <%= f.text_field :doctor %>
-  </div>
+  
+	<div>
+   	Doctor
+        <%= f.select(:doctor, Doctor.all.collect {|p| [ p.name] }, {:prompt => 'Select Doctor'})%>
+	</div>
+	<BR>
+		
   <div class="actions">
     <%= f.submit %>
   </div>
