--- a/app/views/availabilities/_form.html.erb
+++ b/app/views/availabilities/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@availability) do |f| %>
+<%= form_for(@availability) do |f| %> 
 
 <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
 
@@ -15,38 +15,21 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :hour_on %><br />
+    <%= f.label :start_time %><br />
     <%= f.time_select :hour_on %>
   </div>
   <div class="field">
-    <%= f.label :hour_end %><br />
+    <%= f.label :End_Time %><br />
     <%= f.time_select :hour_end %>
   </div>
-  <div class="field">
-    <%= f.label :state %><br />
-    <%= f.text_field :state %>
-  </div>
-  <div>
-	<p>
-	   <%= select("@doctor", "name", Doctor.all.collect {|p| [ p.name] }, {:include_blank => true})%>
-	</p>
-  </div>
-  <div class="field">
-    <%= f.label :user_id %><br />
-    <%= f.text_field :user_id %>
-  </div>
-  <div class="field">
-    <%= f.label :user %><br />
-    <%= f.text_field :user %>
-  </div>
-
   
-
-
-  <div class="field">
-    <%= f.label :doctor %><br />
-    <%= f.text_field :doctor %>
+  <div>
+		Doctor
+	
+	   <%= select("@doctor", "name", Doctor.all.collect {|p| [ p.name] }, {:prompt => 'Select Doctor'})%>
   </div>
+  <BR>
+	
   <div class="actions">
     <%= f.submit %>
   </div>
