--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -1,6 +1,9 @@
 <%= form_for(@appointment) do |f| %>
 
 <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+<%= link_to('Doctor', doctors_path) %>
+<%= link_to('Availabilities', availabilities_path) %>
+
 
   <% if @appointment.errors.any? %>
     <div id="error_explanation">
