--- a/app/views/doctors/_form.html.erb
+++ b/app/views/doctors/_form.html.erb
@@ -1,6 +1,7 @@
 <%= form_for(@doctor) do |f| %>
 
 <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+<%= link_to('Availabilities', availabilities_path) %>
 
   <% if @doctor.errors.any? %>
     <div id="error_explanation">
