--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,11 @@
 <html>
 <head>
   <title>Project</title>
+	
+	<% if user_signed_in? %>
+	    <div style="float:right"><%= link_to "Sign out", destroy_user_session_path %></div>
+	<% end %>
+	
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
