--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -54,3 +54,11 @@ div.field, div.actions {
   font-size: 12px;
   list-style: square;
 }
+.hidden {
+position:absolute;
+left:0px;
+top:-500px;
+width:1px;
+height:1px;
+overflow:hidden;
+}
